@@ -93,6 +93,7 @@ public:
 
     virtual void valueChanged(Scrollbar*);
     virtual IntRect windowClipRect() const;
+    virtual bool isActive() const;
 
     static void adjustmentChanged(GtkAdjustment*, gpointer);
 
@@ -239,6 +240,12 @@ void ScrollView::ScrollViewPrivate::valueChanged(Scrollbar* bar)
 IntRect ScrollView::ScrollViewPrivate::windowClipRect() const
 {
     return static_cast<const FrameView*>(view)->windowClipRect(false);
+}
+
+bool ScrollView::ScrollViewPrivate::isActive() const
+{
+    Page* page = static_cast<const FrameView*>(m_view)->frame()->page();
+    return page && page->focusController()->isActive();
 }
 
 ScrollView::ScrollView()
