@@ -78,6 +78,7 @@ public:
 
     virtual void valueChanged(Scrollbar*);
     virtual IntRect windowClipRect() const;
+    virtual bool isActive() const;
 
     void scrollBackingStore(const IntSize& scrollDelta);
 
@@ -169,6 +170,12 @@ void ScrollView::ScrollViewPrivate::scrollBackingStore(const IntSize& scrollDelt
 IntRect ScrollView::ScrollViewPrivate::windowClipRect() const
 {
     return static_cast<const FrameView*>(m_view)->windowClipRect(false);
+}
+
+bool ScrollView::ScrollViewPrivate::isActive() const
+{
+    Page* page = static_cast<const FrameView*>(m_view)->frame()->page();
+    return page && page->focusController()->isActive();
 }
 
 ScrollView::ScrollView()
