@@ -1,3 +1,12 @@
+2008-01-17  Adam Roben  <aroben@apple.com>
+
+        Qt/GTK+ build fix.
+
+        * platform/gtk/ScrollViewGtk.cpp:
+        (WebCore::ScrollView::ScrollViewPrivate::isActive):
+        * platform/qt/ScrollViewQt.cpp:
+        (WebCore::ScrollView::ScrollViewPrivate::isActive):
+
 2008-01-16  Adam Roben  <aroben@apple.com>
 
         Update scroll bars/form controls when FocusController::isActive changes
